# FIT-Proteins

./: .gitignore  LICENSE  environment.yml  pyproject.toml  run_all_nn.sh
data/: test_brd4_50k.parquet
data/SUBMISSION_OF_MODELS/: submission_rf.csv  submission_xgb_fulltrain.csv
data/prep_logreg_ridge/: prep_metadata.joblib
data/processed/: X_test.npz  X_test_ood_ecfp.npz  X_train_full.npz  X_train_in_ecfp.npz  X_val_ood_ecfp.npz  chemistry_blocks_metadata.joblib  ecfp_metadata.joblib  ids_test.npy  ids_test_ood.npy  ids_train_full.npy  ids_train_in.npy  ids_val_ood.npy  prep_metadata.joblib  test_brd4_50k_clean.parquet  test_brd4_50k_clean_blocks.parquet  train_brd4_50k_clean.parquet  train_brd4_50k_clean_blocks.parquet  train_brd4_50k_clean_blocks_test.parquet  train_brd4_50k_clean_blocks_train.parquet  train_brd4_50k_clean_blocks_val.parquet  y_test_ood.npy  y_train_full.npy  y_train_in.npy  y_val_ood.npy
data/raw/: train_brd4_50k_stratified.parquet
notebooks/: GNNs.ipynb  NNs.ipynb  data_exp.ipynb  ecfp_gen.ipynb  random_forest_presplit.ipynb  xgboost_presplit.ipynb
scripts/: chemistry_pipeline.py  data_processed.py  data_stratified.py  ecfp_gen.py  gnn_pyg_gen.py  smiles_nn_token.py
src/fit_proteins/: __about__.py
src/fit_proteins/models/: gnn.py  gnn_pyg.py  logistic_regression.py  random_forest.py  random_forest_notebook.ipynb  random_forest_presplit.ipynb  random_forest_training.ipynb  rf_efcp.py  smiles_cnn.py  xg_boost.py  xgb_ecfp.py  xgboost_block_aware.ipynb  xgboost_notebook.ipynb  xgboost_presplit.ipynb
